# autoswitchtheme

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  build.bat  build_installer.iss  builder.ps1  config.ini  main.py  pyproject.toml  requierement.txt
.github/workflows/: build.yml  ci.yml  release.yml
src/: __init__.py  main.py
src/core/: __init__.py  app_monitor.py  switch.py  tray.py  tray_app.py
src/utils/: __init__.py  config.py  logger.py  path.py
tests/: conftest.py  test_main.py
tests/core/: test_switch.py  test_tray.py
tests/utils/: test_config.py  test_logger.py  test_path.py
